# InfSearch

./: .coverage  .gitignore  README.md  README2.md  build_and_test.sh  pytest.ini
analysis/: __init__.py  zipf_analysis.py  zipf_cli.py
core/: bridge.py
core_cpp/: CMakeLists.txt
core_cpp/include/: core_api.h  index_api.h  tokenizer.h  zipf_api.h
core_cpp/src/: core.cpp  index.cpp  zipf.cpp
crawler/: __init__.py  config.py  crawler.py  requirements.txt  utils.py
scripts/: __init__.py  corpus_stats.py  run_tests.sh
search/: __init__.py  boolean_search.py  build_boolean_index.py  query_parser.py  search_cli.py
search-system/: .dockerignore  .gitignore  Makefile  README.md  README2.md  docker-compose.yml  requirements.txt
search-system/config/: crawler_config.yaml  hn_second_source.yaml  second_source_only.yaml
search-system/database/: init.sql
search-system/database/schemas/: documents.sql
search-system/docker/app/: .dockerignore  (+1 more)
search-system/docs/: index_report.txt  zipf_report.txt
search-system/python/: __init__.py
tests/: __init__.py  conftest.py  test_cpp_core.py
tests/data/: sample_articles.json
tests/integration/: test_integration.py
tests/unit/: test_boolean_search.py  test_crawler.py  test_tokenizer.py  test_zipf.py
tokenizer/: __init__.py  stemmer_py.py  tokenize_batch.py  tokenize_cli.py
tokenizer/stemmer_cpp/: CMakeLists.txt  porter_russian.cpp  porter_russian.h
web/: __init__.py  app.py  requirements.txt
web/static/: style.css
web/templates/: articles.html  base.html  search.html  stats.html  tests.html  zipf.html
(+34 files in other folders)
